# pynomial

./: .gitignore  CMakeLists.txt  Findeigen3.cmake  README.md  setup.py
CMake/: CMakeLists.txt
CMake/chull/: Findchull.cmake
CMake/eigen/: Findeigen3.cmake
CMake/pynomial/: PNCommonLibsSetup.cmake  PNPythonSetup.cmake
pynomial/: CMakeLists.txt  __init__.py  _pynomial.cxx  pynomial.h
pynomial/geometry/: CMakeLists.txt  __init__.py  _geometry.cxx  module.h  sphere.h  sphere.py
pynomial/geometry/test/: test_sphere.py
pynomial/graph/: CMakeLists.txt  Matrix.h  NN.h  Network.h  __init__.py  _graph.cxx  module.h  utils.h
pynomial/polyhedron/: CMakeLists.txt  Net.h  Polyhedra.h  __init__.py  _polyhedron.cxx  minkowski.h  module.h  polyhedron.py
pynomial/polyhedron/test/: test_minkowski.py
pynomial/register/: CMakeLists.txt  __init__.py  _register.cxx  brute_force.h  module.h  register.py  transform.h  transform.py
test/: polyhedron.py  test_register.py
